# SensorCPP

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  aht10_json.cpp
include/: i2cdevice.h
include/sensors/: AHT10.h
lib/: CMakeLists.txt  I2C_AHT10.cpp  i2cdevice.cpp  util.cpp  util.h
