message("Configuring examples")
find_package(PkgConfig REQUIRED)
pkg_check_modules(JSONCPP jsoncpp)
if(JSONCPP_FOUND)
  message("aht10_json")
  add_executable(aht10_json aht10_json.cpp)
  add_dependencies(aht10_json SensorCPP)
  target_include_directories(aht10_json PRIVATE ${JSONCPP_INCLUDE_DIRS})
  target_link_libraries(aht10_json PRIVATE SensorCPP ${JSONCPP_LIBRARIES})
endif()